# MetaOpt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
example/numericalCase/: numerical.cpp
example/numerical_case/: KGopt2.in  numerical.cc
include/: GKrig.h  Powell.h  exd
src/: Powell.cpp  common.h  doe.h  kriging.cpp  model.h  optimize.cpp  optimizer.h  random.h  sample.h
src/doe/: doe.cc  doe.h  lhs.cpp  lhs.h
src/model/: gkrig.cc  gkrig.h  gp.cc  gp.h  kernel.h  kriging.cc  kriging.h
src/optimizer/: bayesopt.cc  bayesopt.h  ga.cc  ga.h  optimizer.h  patern_search.cc  powell.cc  powell.h  sample.h  surro.cc  surro.h
src/pybind11/: py_gp.cc
test/: makefile  pytest.py  pytest_1d.py  some_func.h  test_bayes.cc  test_ga.cc  test_gp.cc  test_model.cc  test_powell.cc  test_sample.cc
